# LispStructure

./: CMakeLists.txt  README.md  main.cpp
include/: Atom.h  AtomMemento.h  LispElement.h  List.h  ListMemento.h  Memento.h  TransactionToken.h
src/: Atom.cpp  AtomMemento.cpp  LispElement.cpp  List.cpp  ListMemento.cpp  Memento.cpp  TransactionToken.cpp
tests/: CMakeLists.txt  main_test.cpp
